[package]
name = "millennium"
version = "0.0.0"
edition = "2021"

[lib]
name = "millennium"
crate-type = ["staticlib"]

[dependencies]
log         = "0.4"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rmp-serde   = "1"
libc        = "0.2"
oxc_allocator   = "0.135.0"
oxc_diagnostics = "0.135.0"
oxc_parser      = "0.135.0"
oxc_span        = "0.135.0"

[target.'cfg(windows)'.dependencies]
winreg = "0"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
